Fix: CSS issues, width was too small for date

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -92,7 +92,7 @@ span a {
 
     ul li span {
         display: inline-block;
-        width: 160px;
+        width: 180px;
         padding-right: 10px;
         text-align: right;
         font-size: inherit;
